--- a/Application/Admin/View/User/index.html
+++ b/Application/Admin/View/User/index.html
@@ -14,8 +14,10 @@
   <meta name="apple-mobile-web-app-title" content="Amaze UI" />
   <link rel="stylesheet" href="Public/admin/css/amazeui.min.css"/>
   <link rel="stylesheet" href="Public/admin/css/admin.css">
+
 </head>
 <body>
+<script src="/Public/js/jquery-3.2.1.min.js"></script>
 <!--[if lte IE 9]>
 <p class="browsehappy">你正在使用<strong>过时</strong>的浏览器，学钱帮 暂不支持。 请 <a href="" target="_blank">升级浏览器</a>
   以获得更好的体验！</p>
@@ -27,12 +29,11 @@
   <!-- sidebar start -->
   <include file="Index/menu"/>
   <!-- sidebar end -->
-
   <!-- content start -->
   <div class="admin-content">
     <div class="admin-content-body">
       <div class="am-cf am-padding am-padding-bottom-0">
-        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">用户</strong> / <small>展示模块</small></div>
+        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">用户管理</strong> / <small>用户列表</small></div>
       </div>
 
       <hr>
@@ -41,7 +42,7 @@
         <div class="am-u-sm-12 am-u-md-6">
           <div class="am-btn-toolbar">
             <div class="am-btn-group am-btn-group-xs">
-              <button type="button" class="am-btn am-btn-default"><span class="am-icon-plus"></span> 新增</button>
+              <button id="" type="button" class="am-btn am-btn-default" ><a href="admin.php?c=user&a=show" ><span class="am-icon-plus"></span> 新增</a></button>
               <button type="button" class="am-btn am-btn-default"><span class="am-icon-archive"></span> 审核</button>
             </div>
           </div>
@@ -63,47 +64,46 @@
             <table class="am-table am-table-striped am-table-hover table-main">
               <thead>
               <tr>
-                <th class="table-check"><input type="checkbox" /></th><th class="table-id">ID</th><th class="table-title">标题</th><th class="table-type">类别</th><th class="table-author am-hide-sm-only">作者</th><th class="table-date am-hide-sm-only">修改日期</th><th class="table-set">操作</th>
+                <th class="table-check">
+                  <input type="checkbox" />
+                </th><th class="table-id">ID</th>
+                <th class="">用户名</th>
+                <th class="table-type">余额</th>
+                <th class="table-author am-hide-sm-only">收益</th>
+                <th class="table-author am-hide-sm-only">投入</th>
+                <th class="table-author am-hide-sm-only" >计划数</th>
+
+
+                <th class="table-author am-hide-sm-only">最近登录</th>
+                <th class="table-date am-hide-sm-only">注册时间</th>
+                <th class="table-set" >操作</th>
               </tr>
               </thead>
               <tbody>
+              <volist name="user_list" id="user">
               <tr>
                 <td><input type="checkbox" /></td>
-                <td>1</td>
-                <td><a href="#">Business management</a></td>
-                <td>default</td>
-                <td class="am-hide-sm-only">测试1号</td>
-                <td class="am-hide-sm-only">2014年9月4日 7:28:47</td>
+                <td>{$user.u_id}</td>
+                <td>{$user.username}</td>
+                <td>{$user.money}</td>
+                <td>{$user.money}</td>
+                <td>{$user.money}</td>
+                <td class="am-hide-sm-only">{$user.balance}</td>
+                <td class="am-hide-sm-only">2014年9月4日</td>
+                <td class="am-hide-sm-only">2014年9月4日</td>
                 <td>
                   <div class="am-btn-toolbar">
                     <div class="am-btn-group am-btn-group-xs">
                       <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span class="am-icon-pencil-square-o"></span> 编辑</button>
-                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-copy"></span> 复制</button>
+                      <!--<button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-copy"></span> 复制</button>-->
                       <button class="am-btn am-btn-default am-btn-xs am-text-danger am-hide-sm-only"><span class="am-icon-trash-o"></span> 删除</button>
                     </div>
                   </div>
                 </td>
               </tr>
+              </volist>
 
 
-
-              <tr>
-                <td><input type="checkbox" /></td>
-                <td>15</td>
-                <td><a href="#">Business management</a></td>
-                <td>default</td>
-                <td class="am-hide-sm-only">测试1号</td>
-                <td class="am-hide-sm-only">2014年9月4日 7:28:47</td>
-                <td>
-                  <div class="am-btn-toolbar">
-                    <div class="am-btn-group am-btn-group-xs">
-                      <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span class="am-icon-pencil-square-o"></span> 编辑</button>
-                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-copy"></span> 复制</button>
-                      <button class="am-btn am-btn-default am-btn-xs am-text-danger am-hide-sm-only"><span class="am-icon-trash-o"></span> 删除</button>
-                    </div>
-                  </div>
-                </td>
-              </tr>
               </tbody>
             </table>
             <div class="am-cf">
@@ -139,10 +139,7 @@
 
 <a href="#" class="am-icon-btn am-icon-th-list am-show-sm-only admin-menu" data-am-offcanvas="{target: '#admin-offcanvas'}"></a>
 
-<footer>
-  <hr>
-  <p class="am-padding-left">© 2014 AllMobilize, Inc. Licensed under MIT license.</p>
-</footer>
+<include file="Index/footer"/>
 
 <!--[if lt IE 9]>
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
