本次更新了收益算法函数，支持在选定计划的时候计算预计收益

--- a/Application/Home/View/Plan/add.html
+++ b/Application/Home/View/Plan/add.html
@@ -14,7 +14,9 @@
 		 <link rel="stylesheet" href="Public/css/jquery.mobile-1.4.5.min.css"/>
    		 <link rel="stylesheet" href="Public/css/style4.css"/>
    		 <link rel="stylesheet" href="Public/css/layui.css"  media="all">
-   		<!--jqmb需要把所以东西放在page div内--> 
+		<script type="text/javascript" src="/Public/js/jquery-3.2.1.min.js"></script>
+
+		<!--jqmb需要把所以东西放在page div内-->
 		<header data-role="header" data-position="fixed">
 			<a href="#" data-rel="back" class="ui-btn ui-icon-carat-l ui-btn-icon-left ui-nodisc-icon" data-transition="slide" data-direction="revserse">返回</a> 
 			<h3>选择计划</h3>
@@ -29,7 +31,7 @@
 				}
                 var p_day = document.getElementById('p_day').value;
                 if(p_day==''){
-                    alert('计划期限不能为空');
+                    alert('计划天数不能为空');
                     return 0;
                 }
                 var p_num = document.getElementById('p_num').value;
@@ -51,7 +53,7 @@
                     return 0;
                 }
                 if (p_day>30||p_day<10){
-                    alert('计划期限填写无效');
+                    alert('计划天数填写无效');
                     return 0;
                 }
                 if (p_num>200||p_num<10){
@@ -66,6 +68,30 @@
                 document.getElementById('myForm').action = "index.php?c=plan&a=add";
                 document.getElementById("myForm").submit();
             }
+            function get_earning(){
+                var p_money = document.getElementById('p_money').value;
+                var p_day = document.getElementById('p_day').value;
+                var p_num = document.getElementById('p_num').value;
+                if(p_money==''){
+                    alert('投资金额不能为空');
+                    return 0;
+                }
+                if(p_day==''){
+                    alert('计划天数不能为空');
+                    return 0;
+                }
+                if(p_num==''){
+                    alert('每日单词数不能为空');
+                    return 0;
+                }
+                $.get("index.php?c=plan&a=ajax_earning&money="+p_money+"&day="+p_day+"&words="+p_num, function(data){
+                    var res = eval("(" + data + ")");//转为Object对象
+                    var sum = res.sum;
+                    var max = res.max;
+                    document.getElementById('earning_sum').innerHTML = sum + '元';
+                    document.getElementById('earning_max').innerHTML = max + '元';
+                });
+			}
 		</script>
 		<div class="ui-content" data-role="content">
 			<form method="post"  id="myForm">
@@ -78,22 +104,22 @@
 						<p style="font-size: 13px;height: 20px;"> 投资金额<input type="text" id="p_money" name="p_money" value="" data-role="none" placeholder="10元起"></p>
 					</li> 
 					<li style="height: 22px;">
-						<p style="font-size: 13px;height: 20px;"> 计划期限<input type="text" id="p_day" name="p_day" value="" data-role="none" placeholder="10天起"></p>
+						<p style="font-size: 13px;height: 20px;"> 计划天数<input type="text" id="p_day" name="p_day" value="" data-role="none" placeholder="10天起"></p>
 					</li>
 					<li style="height: 25px;">
 						<p style="font-size: 13px;"> 每日单词数<input type="text" id="p_num" name="p_num" value="" data-role="none" placeholder="20个起"></p>
 					</li>
 					<li>
 						<small>预计总收益</small>
-						<span>0元</span>
+						<span id="earning_sum">0元</span>
 					</li>
 					<li>
-						<small>预计每日收益</small>
-						<span>0元</span>
+						<small>预计每日最大收益</small>
+						<span id="earning_max">0元</span>
 					</li>
 
 					<li style="height: 40px;">
-						<button class="layui-btn layui-btn-primary">点击计算预计收益</button>
+						<input type="button" class="layui-btn layui-btn-primary" onclick="get_earning()" value="点击计算预计收益"/>
 					</li>
 
 				</ul>
