完善了收益模块，每天学习完成后的收益计算和发放功能可以使用，收益页的今日收益显示，总资产的计算，累计收益亏损都写好了，收益记录和交易的记录的能正常显示，并且新增了收益计算工具

--- a/Application/Home/View/Earning/index.html
+++ b/Application/Home/View/Earning/index.html
@@ -20,14 +20,14 @@
 </header>
 <br>
 <div style="width: 100%;height: 150px;background-color: #ff9966;color: white">
-<div style="font-size: 13px;">当前帐户：139****2252</div>
+<div style="font-size: 13px;">当前帐户：{$user}</div>
 <div >
 	<div align="center" style="text-align: center; padding-top: 10px;">
 				<!-- <h5 style="font-size: 15px;">总资产</h5> -->
-				<h2 style="font-size: 40px;">￥122579.17</h2>
-				<h5 style="font-size: 13px;">昨日收益(元)</h5>
+				<h2 style="font-size: 40px;">￥{$earn}</h2>
+				<h5 style="font-size: 13px;">今日收益(元)</h5>
 				<br>
-				<h5 style="font-size: 15px;">总资产&nbsp;20&nbsp;元</h5>
+				<h5 style="font-size: 15px;">总资产&nbsp;{$balance}&nbsp;元</h5>
 			<!-- 	<div   style="font-size: 15px;padding-left: 90px;" >
 					<li style="float: left;">昨日收益 <br>25.15元 </li>
 
@@ -44,26 +44,34 @@
             border-left-color: white;border-top-color: white;
             border-bottom-color: white;
             border-style: solid;*/
-            ">累计收益<br>5元</div>
+            ">累计收益<br>{$all_earning}元</div>
             <div style="text-align: center;height: 60px; width: 47%; float: right;padding-right: 10px;margin-left: 10px;
             border-left-color: #f2f2f2;border-left-width: 5px;
             border-right-width: 0px;border-top-width: 0px;
             border-bottom-width: 0px;
-            border-style: solid;">累计亏损<br>1元</div>
+            border-style: solid;">累计亏损<br>{$all_loss}元</div>
         </div>
     </div>
 </section>
     <section class="mt-1">
         <div class="ps-lt">
-            <a href="index.php?c=earning&a=record&tip=0">
+            <a href="index.php?c=earning&a=count">
             <div class="lt-dsb cl-bb">
-                <p>收益记录</p>
+                <p>收益计算</p>
                 <i class="arr-right"></i>
             </div>
             </a>
         </div>
     </section>
 <section class="mt-1">
+    <div class="ps-lt">
+        <a href="index.php?c=earning&a=record&tip=0">
+            <div class="lt-dsb">
+                <p>收益记录</p>
+                <i class="arr-right"></i>
+            </div>
+        </a>
+    </div>
     <div class="ps-lt">
         <a href="index.php?c=earning&a=record&tip=1">
         <div class="lt-dsb cl-bb">
