--- a/Application/Home/View/Earning/record.html
+++ b/Application/Home/View/Earning/record.html
@@ -22,10 +22,10 @@
 	<div class="ui-content" data-role="content">
 		<section>
 			<ul>
-				<volist name="words" id="word">
+				<volist name="record_list" id="record">
 					<li>
-						<small>{$word.w_name}</small>
-						<span>{$word.w_translate}</span>
+						<small>{$record.e_date}</small>
+						<span>{$record.r_content}</span>
 					</li>
 				</volist>
 			</ul>
