本次更新说明：1.登录注册功能完全开放，并且支持手机号和用户名登录，可以实现推广，2.完善了早起签到功能，用户可以签到，3.支持修改头像，包括个人主页内头像，用户名的显示，4.分享功能和收藏功能可以使用了，5.开通了兑奖记录页面，6.设置中可以修改个人资料

--- a/Application/Home/View/Setting/show.html
+++ b/Application/Home/View/Setting/show.html
@@ -7,34 +7,25 @@
     
 </head>
 <body>
-	<div class="loading"><img src="../../../../Public/images/ajax-loader.gif"/></div>
-	<div data-role="page" class="touzi" id="touzi">
+	<div class="loading"><img src="Public/images/ajax-loader.gif"/></div>
+	<div data-role="page" class="touzi ques" id="details">
 		<!--jqmb需要把所以东西放在page div内-->
-		 <link rel="stylesheet" href="../../../../Public/css/jquery.mobile-1.4.5.min.css"/>
-   		 <link rel="stylesheet" href="../../../../Public/css/style4.css"/>
+		 <link rel="stylesheet" href="Public/css/jquery.mobile-1.4.5.min.css"/>
+   		 <link rel="stylesheet" href="Public/css/style4.css"/>
    		 
    		<!--jqmb需要把所以东西放在page div内--> 
 		<header data-role="header" data-position="fixed">
 			<a href="#" data-rel="back" class="ui-btn ui-icon-carat-l ui-btn-icon-left ui-nodisc-icon" data-transition="slide" data-direction="revserse">返回</a> 
 			<h3>{$title}</h3>
 		</header>
-		<div align="center" style="font-size: 5px;">{$content}</div>
 		<div class="ui-content" data-role="content">
-			<section>
-				<h3>应该是标题</h3>
-				<ul>
-					<volist name="words" id="word">
-					<li>
-						<small>{$word.w_name}</small>
-						<span>{$word.w_translate}</span>
-					</li>
-					</volist>
-				</ul>
-			</section>
-
+			<div class="details">
+				<h4>{$message.m_title}</h4>
+				<p>{$message.m_content}</p>
+			</div>
 		</div>
-		<script src="../../../../Public/js/jquery.min.js"></script>
-   		<script src="../../../../Public/js/jquery.mobile-1.4.5.min.js"></script>
+		<script src="Public/js/jquery.min.js"></script>
+   		<script src="Public/js/jquery.mobile-1.4.5.min.js"></script>
    		<script type="text/javascript">
    			$(window).load(function(){
 					$(".loading").fadeOut();
