--- a/Application/Home/View/Setting/index.html
+++ b/Application/Home/View/Setting/index.html
@@ -8,7 +8,7 @@
 <title>个人中心</title>
 <link rel="stylesheet" type="text/css" href="Public/css/style.css">
 </head>
-
+<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
 <body>
 
 <div id="_centent">
@@ -18,28 +18,40 @@
 </header>
 
 <div class="head">
-	<div class="head-img">
-    	<img src="Public/images/head-img.png">
+	<div class="head-img" style="margin:10px auto;">
+        <a href="index.php?c=setting&a=upfile">
+    	<img style="border-radius:40%;font-size: 12px;"  src="{$photo}" alt="快点击上传个头像吧">
+        </a>
     </div>
     <div class="head-dsb">
-    	<p class="dsb-name">--Root</p>
-        <p class="dsb-id">ID  123456789</p>
+    	<p class="dsb-name">--{$username}</p>
+        <p class="dsb-id">--  {$mobile}</p>
     </div>
 </div>
-
+    <!-- JiaThis Button BEGIN -->
+    <!--<div class="jiathis_style">-->
+        <!--<a class="jiathis_button_fav">收藏夹</a>-->
+    <!--</div>-->
+    <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+    <!-- JiaThis Button END -->
 <div class="nav">
 	<ul>
     	<li>
         	<i class="idt"></i>
             <p>签到</p>
         </li>
-    	<li class="pt-line">
+    	<li class="pt-line" style="text-align: center">
+
+                <a class="jiathis_button_fav">
         	<i class="clt"></i>
-            <p>收藏</p>
+                    <p>收藏</p>
+            </a>
         </li>
     	<li>
+            <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">
         	<i class="rcm"></i>
             <p>分享</p>
+            </a>
         </li>
     </ul>
 </div>
@@ -56,33 +68,8 @@
 </section>
     <section class="mt-3">
         <div class="ps-lt">
-            <div class="lt-dsb cl-bb">
-                <p>排行榜</p>
-                <i class="arr-right"></i>
-            </div>
-        </div>
-
-    </section>
-    <section class="mt-3">
-        <div class="ps-lt">
             <div class="lt-dsb">
-                <p>奖品活动</p>
-                <i class="arr-right"></i>
-            </div>
-        </div>
-        <div class="ps-lt">
-            <div class="lt-dsb cl-bb">
-                <p>兑换记录</p>
-                <i class="arr-right"></i>
-            </div>
-        </div>
-
-    </section>
-
-    <section class="mt-3">
-        <div class="ps-lt">
-            <div class="lt-dsb">
-                <p>我的进度</p>
+                <p>排行榜<span style="color: #F7B824;">&nbsp;(还未开通，敬请期待)</span></p>
                 <i class="arr-right"></i>
             </div>
         </div>
@@ -92,16 +79,48 @@
                 <i class="arr-right"></i>
             </div>
         </div>
-
+    </section>
+    <section class="mt-3">
+        <div class="ps-lt">
+            <div class="lt-dsb">
+                <p>奖品活动<span style="color: #F7B824;">&nbsp;(还未开通，敬请期待)</span></p>
+                <i class="arr-right"></i>
+            </div>
+        </div>
+        <div class="ps-lt">
+            <div class="lt-dsb cl-bb">
+                <a href="index.php?c=setting&a=win_record">
+                <p>兑换记录</p>
+                <i class="arr-right"></i>
+                </a>
+            </div>
+        </div>
 
     </section>
+
+    <!--<section class="mt-3">-->
+        <!--<div class="ps-lt">-->
+            <!--<div class="lt-dsb">-->
+                <!--<p>我的进度</p>-->
+                <!--<i class="arr-right"></i>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="ps-lt">-->
+            <!--<div class="lt-dsb cl-bb">-->
+                <!--<p>我的好友</p>-->
+                <!--<i class="arr-right"></i>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</section>-->
 <section class="mt-3"> 
 
     <div class="ps-lt">
+        <a href="index.php?c=setting&a=advice">
         <div class="lt-dsb">
             <p>意见和反馈</p>
             <i class="arr-right"></i>
         </div>
+        </a>
     </div>
 
     <div class="ps-lt">
