--- a/Application/Home/View/Setting/share.html
+++ b/Application/Home/View/Setting/share.html
@@ -16,15 +16,23 @@
    		<!--jqmb需要把所以东西放在page div内--> 
 		<header data-role="header" data-position="fixed">
 			<a href="#" data-rel="back" class="ui-btn ui-icon-carat-l ui-btn-icon-left ui-nodisc-icon"  data-ajax="false">返回</a> 
-			<h3>通知</h3>
+			<h3>分享功能</h3>
 		</header>
 		<div class="ui-content" data-role="content">
 			<dl>
-				<volist name="message_list" id="message">
-				<dd>
-					<a href="index.php?c=setting&a=show&m_id={$message.m_id}" data-ajax="false" class="ui-btn ui-icon-appright ui-btn-icon-right ui-nodisc-icon">{$message.m_title}({$message.m_date})<small></small></a>
-				</dd>
-				</volist>
+				<!-- JiaThis Button BEGIN -->
+				<div class="jiathis_style">
+					<span class="jiathis_txt">分享到：</span>
+					<a class="jiathis_button_qzone">QQ空间</a>
+					<a class="jiathis_button_tsina">新浪微博</a>
+					<a class="jiathis_button_tqq">腾讯微博</a>
+					<a class="jiathis_button_renren">人人网</a>
+					<a class="jiathis_button_fav">收藏夹</a>
+					<a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
+					<a class="jiathis_counter_style"></a>
+				</div>
+				<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+				<!-- JiaThis Button END -->
 			</dl>
 
 		</div>
