本次更新了首页的学习天数，因为新增用户的learn_字段没有值，所以会出现学习天数无法增加12.修改了收益记录的调用逻辑，以前多个收益计划只会计算一个计算的收益，现在不会出现这个问题

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -27,7 +27,7 @@
             <span style="font-size: 14px;color: #fff">今天已学习人数</span><br>
             <span style="font-size: 16px;color: #F7B824">224</span><br>
             <sapn style="font-size: 14px;color: #fff">您已学习</sapn><br>
-            <span style="font-size: 16px;color: #F7B824">{$day}天</span></span>
+            <span style="font-size: 16px;color: #F7B824">{$learn_day}天</span></span>
     </div>
 
         <section class="mt-1">
