--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -25,7 +25,7 @@
         <img src="Public/images/index2.jpg" width="100%" height="200px;" alt="">
         <span style="color: white; position: absolute; top: 0; left: 0;padding-left: 36%;padding-top: 65px;font-size: 15px;text-align: center;">
             <span style="font-size: 14px;color: #fff">今天已学习人数</span><br>
-            <span style="font-size: 16px;color: #F7B824">224</span><br>
+            <span style="font-size: 16px;color: #F7B824">{$all_learn}</span><br>
             <sapn style="font-size: 14px;color: #fff">您已学习</sapn><br>
             <span style="font-size: 16px;color: #F7B824">{$learn_day}天</span></span>
     </div>
