--- a/Application/Home/View/Plan/add.html
+++ b/Application/Home/View/Plan/add.html
@@ -108,13 +108,13 @@
 				<h3>计划收益<span id="state" style="color: #FF5722;"></span></h3>
 				<ul>
 					<li style="height: 22px;">
-						<p style="font-size: 13px;height: 20px;"> 投资金额<input type="text" id="p_money" name="p_money" value="" data-role="none" placeholder="10元起"></p>
+						<p style="font-size: 13px;height: 20px;"> 投资金额<input type="text" id="p_money" name="p_money" value="" data-role="none" placeholder="请输入投入金额，最低10元起"></p>
 					</li> 
 					<li style="height: 22px;">
-						<p style="font-size: 13px;height: 20px;"> 计划天数<input type="text" id="p_day" name="p_day" value="" data-role="none" placeholder="10天起"></p>
+						<p style="font-size: 13px;height: 20px;"> 计划天数<input type="text" id="p_day" name="p_day" value="" data-role="none" placeholder="请输入计划天数，最低10天起"></p>
 					</li>
 					<li style="height: 25px;">
-						<p style="font-size: 13px;"> 每日单词数<input type="text" id="p_num" name="p_num" value="" data-role="none" placeholder="20个起"></p>
+						<p style="font-size: 13px;"> 每日单词数<input type="text" id="p_num" name="p_num" value="" data-role="none" placeholder="请输入要学习单词数，最低20个起"></p>
 					</li>
 					<li>
 						<small>预计总收益</small>
